--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
                 class="footer-input-mail"
                 placeholder="E-mail"
                 required/>
-              <button type="submit" class="footer-subscr-btn">Підписатися
+              <button type="submit" class="footer-subscr-btn">
+                <span>Підписатися</span>
                 <svg class="footer-subscr-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-telegram"></use>
                 </svg>
