--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-address-social container">
-        <div class="footer-address-list">
-          <a href="./index.html" class="link footer-logo">
-            <span class="footer-logo-web" lang="en">Web</span
-            ><span class="footer-logo-studio" lang="en">Studio</span>
+      <div class="footer__content container">
+        <div class="footer__address">
+          <a href="./index.html" class="link footer__logo logo">
+            <span class="logo__web" lang="en">Web</span
+            ><span class="logo__studio logo__studio--white" lang="en">Studio</span>
           </a>
           <address class="address">
             <ul class="address__list list">
@@ -406,33 +406,33 @@
             </ul>
           </address>
         </div>
-        <div class="footer-social-media">
-          <h3 class="footer-social-title">приєднуйтесь</h3>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+        <div class="social-media">
+          <h3 class="social-madia__subtitle">приєднуйтесь</h3>
+          <ul class="social-media__list">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
