finished rename class for footer

--- a/index.html
+++ b/index.html
@@ -439,19 +439,19 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscr">
-          <p class="footer-subscr-text">Підпишіться на розсилку</p>
-          <form class="footer-form">
-            <div class="footer-input">
+        <div class="subscr">
+          <p class="subscr__text">Підпишіться на розсилку</p>
+          <form class="subscr__form">
+            <div class="subscr__input">
               <input
                 name="email"
                 type="email"
-                class="footer-input-mail"
+                class="subscr__mail"
                 placeholder="E-mail"
                 required/>
-              <button type="submit" class="footer-subscr-btn">
+              <button type="submit" class="subscr__btn">
                 <span>Підписатися</span>
-                <svg class="footer-subscr-icon" width="24" height="24">
+                <svg class="subscr__icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-telegram"></use>
                 </svg>
               </button>
