--- a/portfolio.html
+++ b/portfolio.html
@@ -22,33 +22,33 @@
     <header class="header">
       <div class="main-nav container">
         <a href="./index.html" class="logo link">
-          <span class="logo-web" lang="en">Web</span
-          ><span class="logo-studio" lang="en">Studio</span>
+          <span class="logo__web" lang="en">Web</span
+          ><span class="logo__studio" lang="en">Studio</span>
         </a>
         <nav>
           <ul class="site-nav list">
-            <li class="header-item">
-              <a href="./index.html" class="link">Студія</a>
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link link">Студія</a>
             </li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link link current">Портфоліо</a>
             </li>
-            <li class="header-item">
-              <a href="#" class="link">Контакти</a>
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link link">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="auth-nav list">
-          <li class="auth-nav-item">
-            <a href="mailto:info@devstudio.com" class="link contacts-link">
-              <svg class="contacts-icon" width="16" height="12">
+          <li class="auth-nav__item">
+            <a href="mailto:info@devstudio.com" class="link auth-nav__link">
+              <svg class="auth-nav__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="auth-nav-item">
-            <a href="tel:+380961111111" class="link contacts-link">
-              <svg class="contacts-icon" width="10" height="16">
+          <li class="auth-nav__item">
+            <a href="tel:+380961111111" class="link auth-nav__link">
+              <svg class="auth-nav__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -56,8 +56,8 @@
         </ul>
       </div>
     </header>
-    <!-- main -->
     <main>
+      <!-- porfolio -->
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Наші проєкти</h1>
@@ -261,81 +261,82 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-address-social container">
-        <div class="footer-address-list">
-          <a href="./index.html" class="link footer-logo">
-            <span class="footer-logo-web" lang="en">Web</span
-            ><span class="footer-logo-studio" lang="en">Studio</span>
+      <div class="footer__content container">
+        <div class="footer__address">
+          <a href="./index.html" class="link footer__logo logo">
+            <span class="logo__web" lang="en">Web</span
+            ><span class="logo__studio logo__studio--white" lang="en">Studio</span>
           </a>
-          <address>
-            <ul class="list">
-              <li class="footer-item">
+          <address class="address">
+            <ul class="address__list list">
+              <li class="address__item">
                 <a
                   href="https://goo.gl/maps/YVStPBYN47tz3UrX9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="link"
+                  class="address__link"
                   >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
-              <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="link contacts"
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__link link address__contacts"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="tel:+380961111111" class="link contacts"
+              <li class="address__item">
+                <a href="tel:+380961111111" class="address__link link address__contacts"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social-media">
-          <h3 class="footer-social-title">приєднуйтесь</h3>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+        <div class="social-media">
+          <h3 class="social-madia__subtitle">приєднуйтесь</h3>
+          <ul class="social-media__list">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+            <li class="social-media__item">
+              <a href="" class="social-media__link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="footer-subscr">
-          <p class="footer-subscr-text">Підпишіться на розсилку</p>
-          <form class="footer-form">
-            <div class="footer-input">
+        <div class="subscr">
+          <p class="subscr__text">Підпишіться на розсилку</p>
+          <form class="subscr__form">
+            <div class="subscr__input">
               <input
                 name="email"
                 type="email"
-                class="footer-input-mail"
+                class="subscr__mail"
                 placeholder="E-mail"
                 required/>
-              <button type="submit" class="footer-subscr-btn">Підписатися
-                <svg class="footer-subscr-icon" width="24" height="24">
+              <button type="submit" class="subscr__btn">
+                <span>Підписатися</span>
+                <svg class="subscr__icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-telegram"></use>
                 </svg>
               </button>
