--- a/portfolio.html
+++ b/portfolio.html
@@ -62,29 +62,29 @@
         <div class="container">
           <h1 class="visually-hidden">Наші проєкти</h1>
           <!-- List of filtrs -->
-          <ul class="portfolio-btn-list list">
-            <li class="portfolio-btn-item">
-              <button type="button" class="button">Усі</button>
+          <ul class="portfolio__filtr filtr list">
+            <li class="filtr__item">
+              <button type="button" class="portfolio__button">Усі</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="button">Веб-сайти</button>
+            <li class="filtr__item">
+              <button type="button" class="portfolio__button">Веб-сайти</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="button">Додатки</button>
+            <li class="filtr__item">
+              <button type="button" class="portfolio__button">Додатки</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="button">Дизайн</button>
+            <li class="filtr__item">
+              <button type="button" class="portfolio__button">Дизайн</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="button">Маркетинг</button>
+            <li class="filtr__item">
+              <button type="button" class="portfolio__button">Маркетинг</button>
             </li>
           </ul>
           <!-- List of projects -->
-          <ul class="portfolio-list list">
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+          <ul class="portfolio__list list">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_1.jpg"
                     alt="Стартова сторінка вебсайту"
                     width="370"
@@ -96,8 +96,8 @@
                   </div>
                 </div>
                 <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Технокряк</h3>
-                  <p class="portfolio-text">Веб-сайт</p>
+                  <h3 class="portfolio__subtitle">Технокряк</h3>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
