--- a/portfolio.html
+++ b/portfolio.html
@@ -89,169 +89,175 @@
                     alt="Стартова сторінка вебсайту"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
+                <div class="portfolio__dscr">
                   <h3 class="portfolio__subtitle">Технокряк</h3>
                   <p class="portfolio__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img" src="./images/img_2.jpg" alt="Постер" width="370" />
-                  <div class="portfolio-hidden-dscr">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
+                    src="./images/img_2.jpg"
+                    alt="Постер про спорт"
+                    width="370"
+                  />
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">
-                    Постер New Orlean vs Golden Star
-                  </h3>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Постер New Orlean vs Golden Star</h3>
+                  <p class="portfolio__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_3.jpg"
-                    alt="Логотип ресторану"
+                    alt="Постер ресторану"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Ресторан Seafood</h3>
-                  <p class="portfolio-text">Додаток</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Ресторан Seafood</h3>
+                  <p class="portfolio__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img" src="./images/img_4.jpg" alt="Навушники" width="370" />
-                  <div class="portfolio-hidden-dscr">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
+                    src="./images/img_4.jpg"
+                    alt="Навушники"
+                    width="370"
+                  />
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Проєкт Prime</h3>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Проєкт Prime</h3>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_5.jpg"
-                    alt="Зображення коробочок "
+                    alt="Зображення коробочок"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Проєкт Boxes</h3>
-                  <p class="portfolio-text">Додаток</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Проєкт Boxes</h3>
+                  <p class="portfolio__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_6.jpg"
                     alt="Стартова сторінка вебсайту"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Inspiration has no Borders</h3>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_7.jpg"
                     alt="Зображення книги"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Видання Limited Edition</h3>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Видання Limited Edition</h3>
+                  <p class="portfolio__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_8.jpg"
                     alt="Зображення етикетки"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Проєкт LAB</h3>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Проєкт LAB</h3>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="img-wrapper">
-                  <img class="projects-img"
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__wrapper">
+                  <img class="portfolio__img"
                     src="./images/img_9.jpg"
                     alt="Зображення ноутбуку"
                     width="370"
                   />
-                  <div class="portfolio-hidden-dscr">
+                  <div class="portfolio__hidden-dscr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </div>
                 </div>
-                <div class="portfolio-dscr">
-                  <h3 class="portfolio-title">Growing Business</h3>
-                  <p class="portfolio-text">Додаток</p>
+                <div class="portfolio__dscr">
+                  <h3 class="portfolio__subtitle">Growing Business</h3>
+                  <p class="portfolio__text">Додаток</p>
                 </div>
               </a>
             </li>
