--- a/index.html
+++ b/index.html
@@ -467,16 +467,16 @@
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
         </div>
-        <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
-        <form name="form-buy" class="modal-form">
+        <p class="modal__text">Залиште свої дані, ми вам передзвонимо</p>
+        <form name="form-buy" class="modal__form">
           <div class="input-line">
-            <label for="user-name" class="modal-label">Ім'я</label>
+            <label for="user-name" class="modal__label">Ім'я</label>
             <div class="input-wrapper">
               <input
                 name="user-name"
                 id="user-name"
                 type="text"
-                class="modal-input"
+                class="modal__input"
                 required
               />
               <svg class="input-icon" width="18" height="18">
@@ -485,13 +485,13 @@
             </div>
           </div>
           <div class="input-line">
-            <label for="user-tel" class="modal-label">Телефон</label>
+            <label for="user-tel" class="modal__label">Телефон</label>
             <div class="input-wrapper">
               <input
                 name="user-tel"
                 id="user-tel"
                 type="tel"
-                class="modal-input"
+                class="modal__input"
                 title="+38 (---) -- -- ---"
                 required
               />
@@ -501,13 +501,13 @@
             </div>
           </div>
           <div class="input-line">
-            <label for="user-mail" class="modal-label">Пошта</label>
+            <label for="user-mail" class="modal__label">Пошта</label>
             <div class="input-wrapper">
               <input
                 name="user-mail"
                 id="user-mail"
                 type="email"
-                class="modal-input"
+                class="modal__input"
                 required
               />
               <svg class="input-icon" width="18" height="18">
@@ -516,12 +516,12 @@
             </div>
           </div>
           <div class="input-line input-line-textarea">
-            <label for="user-text" class="modal-label">Коментар</label>
+            <label for="user-text" class="modal__label">Коментар</label>
             <textarea
               name="user-text"
               id="user-text"
               placeholder="Введіть текст"
-              class="modal-textarea"
+              class="modal__textarea"
             ></textarea>
           </div>
           <div class="input-line check-line">
@@ -541,7 +541,7 @@
               <a href="" class="agree-text link">Умови договору</a>
             </label>
           </div>
-          <button type="submit" class="modal-button">Відправити</button>
+          <button type="submit" class="modal__button">Відправити</button>
         </form>
       </div>
     </div>
